@@ -15,6 +15,7 @@ import static org.jboss.jandex.gizmo2.Jandex2Gizmo.classDescOf;
 import static org.jboss.jandex.gizmo2.Jandex2Gizmo.methodDescOf;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -945,7 +946,7 @@ public class WebSocketProcessor {
 
     private static Map<String, SecurityCheck> collectEndpointSecurityChecks(List<WebSocketEndpointBuildItem> endpoints,
             ClassSecurityCheckStorageBuildItem storage, IndexView index, SecurityTransformer securityTransformer) {
-        return endpoints
+        Map<String, SecurityCheck> endpointSecurityChecks = endpoints
                 .stream().<Map.Entry<String, SecurityCheck>> mapMulti((endpoint, consumer) -> {
                     var beanName = endpoint.beanClassName();
                     if (storage.getSecurityCheck(beanName) instanceof SecurityCheck check) {
@@ -956,7 +957,13 @@ public class WebSocketProcessor {
                                 + "correctly. Please open issue in Quarkus project");
                     }
                 })
-                .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue));
+                // Do not use Collectors.toUnmodifiableMap() here - its iteration order is not stable.
+                // Instead, collect to a regular HashMap<K, V> and wrap it in Collections.unmodifiableMap()
+                // down below.
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (previous, current) -> {
+                    throw new IllegalStateException("Multiple WebSocket endpoints with the same id");
+                }));
+        return Collections.unmodifiableMap(endpointSecurityChecks);
     }
 
     private static Map<String, Set<String>> collectEndpointAuthorizationPolicies(SecurityTransformer securityTransformer,
@@ -2002,7 +2009,7 @@ public class WebSocketProcessor {
         private final Map<String, SecurityCheck> endpointIdToSecurityCheck;
 
         private EndpointSecurityChecksBuildItem(Map<String, SecurityCheck> endpointIdToSecurityCheck) {
-            this.endpointIdToSecurityCheck = endpointIdToSecurityCheck;
+            this.endpointIdToSecurityCheck = Collections.unmodifiableMap(endpointIdToSecurityCheck);
         }
     }
 
@@ -2010,7 +2017,9 @@ public class WebSocketProcessor {
         private final Map<String, Set<String>> policyNameToEndpoints;
 
         private AuthorizationPolicyToEndpointsBuildItem(Map<String, Set<String>> policyNameToEndpoints) {
-            this.policyNameToEndpoints = Map.copyOf(policyNameToEndpoints);
+            // Map.copyOf() must not be used here - it produces unstable iteration order
+            Map<String, Set<String>> copiedMap = new HashMap<>(policyNameToEndpoints);
+            this.policyNameToEndpoints = Collections.unmodifiableMap(copiedMap);
         }
     }
 }
